--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,8 @@
 # model example in https://symfony.com/doc/current/setup/web_server_configuration.html
 server {
-    server_name domain.tld www.domain.tld;
+    index localhost;
+    listen 80:
+    server_name localhost;
     root /var/www/project/public;
 
     location / {
@@ -16,7 +18,7 @@ server {
     # }
 
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+        fastcgi_pass php74-service:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
 
@@ -37,6 +39,13 @@ server {
         #         $document_root instead.
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
+
+        # Avoid upstream sent too big header while reading error
+        # https://stackoverflow.com/questions/17708152/nginx-overwrites-general-symfony-errors-with-502-bad-gateway
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
+
         # Prevents URIs that include the front controller. This will 404:
         # http://domain.tld/index.php/some-path
         # Remove the internal directive to allow URIs like this
