--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,18 @@ services:
 
   #mysql
   mysql8-service:
-
-  #node
-
+    image: mysql:8
+    container_name: mysql8-container
+    ports:
+      - '3307:3306'
+    volumes:
+      - ./mysql:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password --character-set-serer=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    restart: always # always restart unless stopped manually.
+    environment:
+      MYSQL_USER: root
+      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_PASSWORD: secret
+    networks:
+      - nginx-php74-mysql8
+      -
