--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 version: '3'
 
 networks:
-  nginx-php74-mysql8
+  nginx-php74-mysql8:
+
 services:
 
   # nginx
   nginx-service:
     image: nginx:stable-alpine
-    container_name: nginx-container
+    container_name: ss-nginx
     ports:
       - '8080:80'
     volumes:
@@ -23,7 +24,7 @@ services:
     build:
       context: .
       dockerfile: ./php/Dockerfile
-    container_name: php74-container
+    container_name: ss-php74
     ports:
       - '9000:9000'
     volumes:
@@ -34,7 +35,7 @@ services:
   #mysql
   mysql8-service:
     image: mysql:8
-    container_name: mysql8-container
+    container_name: ss-mysql8
     ports:
       - '3307:3306'
     volumes:
@@ -42,9 +43,9 @@ services:
     command: --default-authentication-plugin=mysql_native_password --character-set-serer=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: always # always restart unless stopped manually.
     environment:
-      MYSQL_USER: root
+      MYSQL_ROOT: root
+      MYSQL_USER: project
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_PASSWORD: secret
     networks:
       - nginx-php74-mysql8
-      -
