Invalid port error correction.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,11 @@
-# model example in https://symfony.com/doc/current/setup/web_server_configuration.html
 server {
-    index localhost;
-    listen 80:
+
+    listen 80;
+    index index.php;
     server_name localhost;
     root /var/www/project/public;
+    error_log /var/log/nginx/project_error.log;
+    access_log /var/log/nginx/project_access.log;
 
     location / {
         # try to serve file directly, fallback to index.php
@@ -18,6 +20,9 @@ server {
     # }
 
     location ~ ^/index\.php(/|$) {
+
+        # Sets the address of a FastCGI server. The address can be specified as a domain name or IP address, and a port
+        # fastcgi_pass php:9000;
         fastcgi_pass php74-service:9000;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
@@ -34,9 +39,6 @@ server {
         # Otherwise, PHP's OPcache may not properly detect changes to
         # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
         # for more information).
-        # Caveat: When PHP-FPM is hosted on a different machine from nginx
-        #         $realpath_root may not resolve as you expect! In this case try using
-        #         $document_root instead.
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_param DOCUMENT_ROOT $realpath_root;
 
@@ -57,7 +59,4 @@ server {
     location ~ \.php$ {
         return 404;
     }
-
-    error_log /var/log/nginx/project_error.log;
-    access_log /var/log/nginx/project_access.log;
 }
