--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update && apt-get install -y zlib1g-dev g++ git libicu-dev zip libzi
     && pecl install apcu \
     && docker-php-ext-enable apcu \
     && docker-php-ext-configure zip \
-    && docker-php-ext-install zip \
+    && docker-php-ext-install zip
 
 WORKDIR /var/www/project
 
