--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - '9000:9000'
     volumes:
-      - ./app/:/var/www/project
+      - ./app:/var/www/project
     networks:
       - nginx-php74-mysql8
 
@@ -38,12 +38,13 @@ services:
     image: mysql:8
     container_name: ss-mysql8
     ports:
-      - '3307:3306'
+      - '4306:3306'
     volumes:
       - ./mysql:/var/lib/mysql
     command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: always # always restart unless stopped manually.
     environment:
+      MYSQL_DATABASE: project
       MYSQL_ROOT: root
       MYSQL_USER: project
       MYSQL_ROOT_PASSWORD: secret
